# Multicore-Programming

./: README.md
lab1_ThreadSafeStructures/: ThreadSafeKVStore.cpp  ThreadSafeListenerQueue.cpp  main.cpp  makefile  readme
lab2_ThreadPoolServer/: ThreadPoolServer.cpp  ThreadSafeKVStore.cpp  httpreq.cc  httpreq.hpp  main.cpp  makefile  read.md
lab3_read_write_lock/: CMakeLists.txt  GlobalLockThreadSafeKVStore.cpp  ThreadPoolServer.cpp  httpreq.hpp  lab3_report.md  main.cpp  makefile  md5.cpp
lab3_read_write_lock/output/: stats_with_12_threads  stats_with_12_threadswith_global_lock  stats_with_1_threads  stats_with_1_threadswith_global_lock  stats_with_2_threads  stats_with_2_threadswith_global_lock  stats_with_3_threads  stats_with_3_threadswith_global_lock  stats_with_4_threads  stats_with_4_threadswith_global_lock  stats_with_5_threads  stats_with_5_threadswith_global_lock  stats_with_6_threads  stats_with_6_threadswith_global_lock  stats_with_8_threads  stats_with_8_threadswith_global_lock
lab4_server_with_diffrent_cache/: CMakeLists.txt  ThreadPoolServer.cpp  ThreadSafeKVStoreLRU.cpp  ThreadSafeListenerQueue.cpp  httpreq.cc  lab4  main.cpp  makefile  md5.h  read.md
